azure-aks-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hpa-webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hpa-webapi
  template:
    metadata:
      labels:
        app: hpa-webapi
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: hpa-webapi
        image: ezhar/webapi:9
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 250m
            memory: 265Mi
        ports:
        - containerPort: 5001
          name: hpa-webapi
---
apiVersion: v1
kind: Service
metadata:
  name: hpa-webapi
spec:
  selector:
    app: hpa-webapi
  ports:
  - protocol: TCP
    port: 5001
    targetPort: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hpa-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hpa-webapp
  template:
    metadata:
      labels:
        app: hpa-webapp
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: hpa-webapp
        image: ezhar/webapp:10
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hpa-webapp
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: hpa-webapp
